# FocusTracker

./: README.md  authmanager.cpp
CP_LifeTracker/: AccountTab.qml  AddEventDialog.qml  AddHabitWindow.qml  AddNoteDialog.qml  AppearanceTab.qml  AuthForm.qml  AuthWindow.qml  CMakeLists.txt  CMakeLists.txt.user.c656148  CalendarView.qml  ContentArea.qml  CustomComboBox.qml  CustomRectButton.qml  CustomScrollBar.qml  CustomSwitch.qml  EditEventDialog.qml  FocusTracker_en.ts  FocusTracker_ru_.ts  GeneralTab.qml  HabitItem.qml  HabitView.qml  LeftPanel.qml  Main.qml  NavButton.qml  NavIconButton.qml  NoteCard.qml  NotesView.qml  ProfileButton.qml  SectionDivider.qml  SettingSection.qml  Settings.qml  SettingsButton.qml  SettingsManager.cpp  SettingsManager.h  SidePanel.qml  SidebarArea.qml  StatsView.qml  TaskItem.qml  TasksView.qml  Theme.qml  (+13 more)
CP_LifeTracker/translations/: lifetracker_en.ts  lifetracker_ru.ts
